update daraz clone webpage

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
         <div class="Box1">
             <a href="">
-                <img src="images/item3.jpg" alt="Item On sale Trimer" id="L-B-1">
+                <img src="images/item3.jpg" alt="Item On sale Trimer" id="L-B-2">
                 <p id="L-P-2">OKS New T900 ultra 2 Smart Wacth Bluetooth....</p>
                 <p id="L-P-3">Rs.1282</p>
                 <p id="L-P-4"><s id="cut">Rs.4999</s> -74%</p>
@@ -122,7 +122,8 @@
             </a>
         </div>
      </div>
-     <p id="categories">Categories</p>
+     <!-- categories ka box jis sa hum background da ga -->
+     <div id="color"><p id="categories">Categories</p></div>
      <!-- categories a gi -->
       <div class="categories-row-1">
         <div class="cell-1">
@@ -228,25 +229,25 @@
         <div class="line1">
             <div class="Box1">
                 <a href="">
-                    <img src="images/item1.png" alt="Watch on Sale" id="L-P-1">
-                    <p id="L-P-2">M10 Air buds Wireless Bluetooth with Charger in cheap price.....</p>
-                    <p id="L-P-3">Rs.895</p>
-                    <p id="L-P-4"><s id="cut">Rs.2500</s> -64.2%</p>
-                    <span class="tooltip">Discount: 64.2%</span> <!-- Tooltip -->
+                    <img src="images/moblie stand 1.webp" alt="Sale" id="L-P-1">
+                    <p id="L-P-2">Uneversal mobile stand|Flex Mobile holder|...</p>
+                    <p id="L-P-3">Rs.247</p>
+                    <p id="L-P-4"><s id="cut">Rs.600</s> -60%</p>
+                    <span class="tooltip">Discount: 60%</span> <!-- Tooltip -->
                 </a>
             </div>
             <div class="Box1">
                 <a href="">
-                    <img src="images/item2.jpg" alt="Item On sale Trimer" id="L-P-1">
-                    <p id="L-P-2">Misbeka Bag 3 - Large Storage box.....</p>
-                    <p id="L-P-3">Rs.320</p>
-                    <p id="L-P-4"><s id="cut">Rs.888</s> -64%</p>
-                    <span class="tooltip">Discount: 64%</span> <!-- Tooltip -->
+                    <img src="images/rohe yaram novel 2.webp" alt="Item On sale Trimer" id="L-P-1">
+                    <p id="L-P-2">Rooh e Yaram Novel/Rooh e Yaram novel in urdu Novel....</p>
+                    <p id="L-P-3">Rs.679</p>
+                    <p id="L-P-4"><s id="cut">Rs.679</s> -0%</p>
+                    <span class="tooltip">Discount: 0%</span> <!-- Tooltip -->
                 </a>
             </div>
             <div class="Box1">
                 <a href="">
-                    <img src="images/item3.jpg" alt="Item On sale Trimer" id="L-B-1">
+                    <img src="images/bike sheat cousin 3.webp" alt="Item On sale Trimer" id="L-B-3">
                     <p id="L-P-2">OKS New T900 ultra 2 Smart Wacth Bluetooth....</p>
                     <p id="L-P-3">Rs.1282</p>
                     <p id="L-P-4"><s id="cut">Rs.4999</s> -74%</p>
@@ -255,7 +256,7 @@
             </div>
             <div class="Box1">
                 <a href="">
-                    <img src="images/item4.jpg" alt="Watch on Sale" id="L-P-1">
+                    <img src="images/macley landon 4.webp" alt="Watch on Sale" id="L-P-1">
                     <p id="L-P-2">Tummy Tripper Single Spring and Double Sprints.....</p>
                     <p id="L-P-3">Rs.895</p>
                     <p id="L-P-4"><s id="cut">Rs.2500</s> -64.2%</p>
@@ -264,7 +265,7 @@
             </div>
             <div class="Box1">
                 <a href="">
-                    <img src="images/item5.jpg" alt="Watch on Sale" id="L-P-1">
+                    <img src="images/clothe stroge box 5.webp" alt="Watch on Sale" id="L-P-1">
                     <p id="L-P-2">M10 Air buds Wireless Bluetooth with Charger in cheap price.....</p>
                     <p id="L-P-3">Rs.895</p>
                     <p id="L-P-4"><s id="cut">Rs.2500</s> -64.2%</p>
@@ -275,7 +276,7 @@
          <div class="line1">
             <div class="Box1">
                 <a href="">
-                    <img src="images/item1.png" alt="Watch on Sale" id="L-P-1">
+                    <img src="images/table set 6.webp" alt="Watch on Sale" id="L-P-1">
                     <p id="L-P-2">M10 Air buds Wireless Bluetooth with Charger in cheap price.....</p>
                     <p id="L-P-3">Rs.895</p>
                     <p id="L-P-4"><s id="cut">Rs.2500</s> -64.2%</p>
@@ -284,7 +285,7 @@
             </div>
             <div class="Box1">
                 <a href="">
-                    <img src="images/item2.jpg" alt="Item On sale Trimer" id="L-P-1">
+                    <img src="images/vegetable cuter 7.webp" alt="Item On sale Trimer" id="L-P-1">
                     <p id="L-P-2">Misbeka Bag 3 - Large Storage box.....</p>
                     <p id="L-P-3">Rs.320</p>
                     <p id="L-P-4"><s id="cut">Rs.888</s> -64%</p>
@@ -293,7 +294,7 @@
             </div>
             <div class="Box1">
                 <a href="">
-                    <img src="images/item3.jpg" alt="Item On sale Trimer" id="L-B-1">
+                    <img src="images/head free 8.webp" alt="Item On sale Trimer" id="L-B-1">
                     <p id="L-P-2">OKS New T900 ultra 2 Smart Wacth Bluetooth....</p>
                     <p id="L-P-3">Rs.1282</p>
                     <p id="L-P-4"><s id="cut">Rs.4999</s> -74%</p>
@@ -302,7 +303,7 @@
             </div>
             <div class="Box1">
                 <a href="">
-                    <img src="images/item4.jpg" alt="Watch on Sale" id="L-P-1">
+                    <img src="images/wacth 9.webp" alt="Watch on Sale" id="L-P-9">
                     <p id="L-P-2">Tummy Tripper Single Spring and Double Sprints.....</p>
                     <p id="L-P-3">Rs.895</p>
                     <p id="L-P-4"><s id="cut">Rs.2500</s> -64.2%</p>
@@ -311,7 +312,7 @@
             </div>
             <div class="Box1">
                 <a href="">
-                    <img src="images/item5.jpg" alt="Watch on Sale" id="L-P-1">
+                    <img src="images/ladies bag 10.webp" alt="Watch on Sale" id="L-P-6">
                     <p id="L-P-2">M10 Air buds Wireless Bluetooth with Charger in cheap price.....</p>
                     <p id="L-P-3">Rs.895</p>
                     <p id="L-P-4"><s id="cut">Rs.2500</s> -64.2%</p>
@@ -322,7 +323,7 @@
          <div class="line1">
             <div class="Box1">
                 <a href="">
-                    <img src="images/item1.png" alt="Watch on Sale" id="L-P-1">
+                    <img src="images/gree botuya 11.webp" alt="Watch on Sale" id="L-P-1">
                     <p id="L-P-2">M10 Air buds Wireless Bluetooth with Charger in cheap price.....</p>
                     <p id="L-P-3">Rs.895</p>
                     <p id="L-P-4"><s id="cut">Rs.2500</s> -64.2%</p>
@@ -331,7 +332,7 @@
             </div>
             <div class="Box1">
                 <a href="">
-                    <img src="images/item2.jpg" alt="Item On sale Trimer" id="L-P-1">
+                    <img src="images/excersise item12.webp" alt="Item On sale Trimer" id="L-P-1">
                     <p id="L-P-2">Misbeka Bag 3 - Large Storage box.....</p>
                     <p id="L-P-3">Rs.320</p>
                     <p id="L-P-4"><s id="cut">Rs.888</s> -64%</p>
@@ -340,7 +341,7 @@
             </div>
             <div class="Box1">
                 <a href="">
-                    <img src="images/item3.jpg" alt="Item On sale Trimer" id="L-B-1">
+                    <img src="images/13.webp" alt="Item On sale Trimer" id="L-B-1">
                     <p id="L-P-2">OKS New T900 ultra 2 Smart Wacth Bluetooth....</p>
                     <p id="L-P-3">Rs.1282</p>
                     <p id="L-P-4"><s id="cut">Rs.4999</s> -74%</p>
@@ -349,7 +350,7 @@
             </div>
             <div class="Box1">
                 <a href="">
-                    <img src="images/item4.jpg" alt="Watch on Sale" id="L-P-1">
+                    <img src="images/14.webp" alt="Watch on Sale" id="L-P-1">
                     <p id="L-P-2">Tummy Tripper Single Spring and Double Sprints.....</p>
                     <p id="L-P-3">Rs.895</p>
                     <p id="L-P-4"><s id="cut">Rs.2500</s> -64.2%</p>
@@ -358,7 +359,7 @@
             </div>
             <div class="Box1">
                 <a href="">
-                    <img src="images/item5.jpg" alt="Watch on Sale" id="L-P-1">
+                    <img src="images/15.webp" alt="Watch on Sale" id="L-P-1">
                     <p id="L-P-2">M10 Air buds Wireless Bluetooth with Charger in cheap price.....</p>
                     <p id="L-P-3">Rs.895</p>
                     <p id="L-P-4"><s id="cut">Rs.2500</s> -64.2%</p>
@@ -369,7 +370,7 @@
          <div class="line1">
             <div class="Box1">
                 <a href="">
-                    <img src="images/item1.png" alt="Watch on Sale" id="L-P-1">
+                    <img src="images/16.webp" alt="Watch on Sale" id="L-P-1">
                     <p id="L-P-2">M10 Air buds Wireless Bluetooth with Charger in cheap price.....</p>
                     <p id="L-P-3">Rs.895</p>
                     <p id="L-P-4"><s id="cut">Rs.2500</s> -64.2%</p>
@@ -378,7 +379,7 @@
             </div>
             <div class="Box1">
                 <a href="">
-                    <img src="images/item2.jpg" alt="Item On sale Trimer" id="L-P-1">
+                    <img src="images/17.webp" alt="Item On sale Trimer" id="L-P-1">
                     <p id="L-P-2">Misbeka Bag 3 - Large Storage box.....</p>
                     <p id="L-P-3">Rs.320</p>
                     <p id="L-P-4"><s id="cut">Rs.888</s> -64%</p>
@@ -387,7 +388,7 @@
             </div>
             <div class="Box1">
                 <a href="">
-                    <img src="images/item3.jpg" alt="Item On sale Trimer" id="L-B-1">
+                    <img src="images/18.webp" alt="Item On sale Trimer" id="L-B-1">
                     <p id="L-P-2">OKS New T900 ultra 2 Smart Wacth Bluetooth....</p>
                     <p id="L-P-3">Rs.1282</p>
                     <p id="L-P-4"><s id="cut">Rs.4999</s> -74%</p>
@@ -396,7 +397,7 @@
             </div>
             <div class="Box1">
                 <a href="">
-                    <img src="images/item4.jpg" alt="Watch on Sale" id="L-P-1">
+                    <img src="images/19.webp" alt="Watch on Sale" id="L-P-1">
                     <p id="L-P-2">Tummy Tripper Single Spring and Double Sprints.....</p>
                     <p id="L-P-3">Rs.895</p>
                     <p id="L-P-4"><s id="cut">Rs.2500</s> -64.2%</p>
@@ -405,7 +406,7 @@
             </div>
             <div class="Box1">
                 <a href="">
-                    <img src="images/item5.jpg" alt="Watch on Sale" id="L-P-1">
+                    <img src="images/20.webp" alt="Watch on Sale" id="L-P-1">
                     <p id="L-P-2">M10 Air buds Wireless Bluetooth with Charger in cheap price.....</p>
                     <p id="L-P-3">Rs.895</p>
                     <p id="L-P-4"><s id="cut">Rs.2500</s> -64.2%</p>
